--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.4",
     "chartjs-adapter-date-fns": "^3.0.0",
